--- a/edit-contact.html
+++ b/edit-contact.html
@@ -14,7 +14,7 @@
          <label for="mobile">Mobile</label>
         <input type="text" name="mobile" id="mobile" readonly><br/>
          <label for="email">Email</label>
-        <input type="text" name="email" id="email" readonly><br/>
+        <input type="text" name="email" id="email" readonly><br/><br/>
          <label for="avatar" id="avatarLabel" hidden>Change Profile Image</label><br/>
         <input type="file" name="avatar" id="avatar" hidden>
         <br/><br>
